# TinyVoice

./: .gitignore  GEMINI.md  README.md  audio_resampling.ipynb  datamodule.py  dataset.py  inference.py  inference_single.py  kaggle_runnable.py  loss.py  model.py  pixi.toml  pyproject.toml  pyproject_tpu.toml  readme.md  saving_test.ipynb  setup.py  test.ipynb  test_optax.py  testing.ipynb  train.ipynb  train.py  train_minimal.ipynb  train_minimal.py  train_model.py  trainer.ipynb  utils.py  verify_conformer_mask.py  verify_fix.py  zz.ipynb
conformer/: activation.py  config.py  conformer_block.py  conv_module.py  conv_subsampler.py  dataset.py  decode.py  factory.py  feedforward.py  mel.py  metrics.py  model.py  parallelism.py  positional_encoder.py  prefetch.py  spec_augment.py  steps.py  tokenizer.py  train_utils.py
miniature_voice/: collate.py  datamodule.py  dataset.py  loss.py  model.py  utils.py
scripts/: generate_array_records.sh  generate_packed_data.py  get_magic_numbers.ipynb  magi_processing.ipynb  process_common_voice_dataset.py  resample_and_prepare.sh  run_training.sh  train.py  train_bpe_tokenizer.py  train_bpe_tokenizer.sh  train_tokenizer.py
