[project]
name = "tiny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.1",
    "grain>=0.2.15",
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jax[cuda12]>=0.8.1",
    "librosa>=0.11.0",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "xprof>=2.21.3",
]
